--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/icons8-tic-tac-toe-96.png" type="image/x-icon">
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
     
     <div class="board">
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
-        <div class="cel" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
     </div>
     <div class="winning-msg" data-winning-msg>
         <p>X Winner!</p>
