--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     
-    <div class="board">
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
+    <div class="table x">
+        <div class="cell x" data-cell></div>
+        <div class="cell circle" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
