Determines if the active player has won the game.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="cell" data-cell></div>
     </div>
     <div class="winning-msg" data-winning-msg>
-        <p class="winner-text">X Winner!</p>
+        <p class="victory-msg" data-victory-msg>X Winner!</p>
         <button class="btn">Restart</button>
     </div>
 
