Restructure the startGame function to ensure proper event listener setup.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="winning-msg" data-winning-msg>
         <p class="victory-msg" data-victory-msg>X Winner!</p>
-        <button class="btn">Restart</button>
+        <button class="btn" data-restart-btn>Restart</button>
     </div>
 
     <script src="/assets/js/script.js"></script>
