--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
+
+    <h1>Tic Tac Toe Game</h1>
     
     <div class="table x" data-table>
         <div class="cell" data-cell></div>
